A.F....... [ZBX-5074] redesign configuration of action (Eduard)
..F....... [ZBX-1357] updated Brazilian Portuguese, French, Japanese, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)
..F....... [ZBXNEXT-1019] updated jQuery to 1.7.2 and jQuery UI to 1.8.20 (Vedmak)
..F....... [ZBXNEXT-829] Zabbix server availability check (Vedmak)

Bug fixes:
........S. [ZBX-5042] fixed server crash while synchronization host_inventory table (Sasha)
........S. [ZBX-5042] fixed possible sql errors while node synchronization (Sasha)
..F....... [ZBX-5133] fixed error when adding the first map element (Toms)
A......... [ZBX-5115] fixed API object names being case sensitive (Pavels)
....I..... [ZBX-5058] init.d scripts updated for Zabbix 2.0 (Andris)
..F....... [ZBX-5143] fixed regular expression delete action ignores cancelation in confirmation dialog (Vedmak)
........S. [ZBX-5148] fixed linking of item prototypes by a discovery rule (Sasha)
....I..... [ZBX-5061] fixed Oracle SQL errors when executing data.sql (Sasha)
........S. [ZBX-5123] fixed Oracle SQL error while linking a template by server (Sasha)
..F....... [ZBX-5156] fixed incorrect values in node edit form (Vedmak)
A......... [ZBX-5140] fixed usermacro.get return macros from all nodes by default (Vedmak)
..F....... [ZBX-5128] fixed pagefilter->groupid (Eduard)
..F....... [ZBX-5073] fixed parent template links in items, triggers, graphs and discovery rules (Eduard)
..F....... [ZBX-5104] fixed severity colors in trigger forms (Vedmak)
..F....... [ZBX-5104] fixed trigger severity control works incorrectly on fast clicks (Vedmak)
..F....... [ZBX-5119] fixed maintenance till day (Eduard)
..F....... [ZBX-5105] fixed server name not shown in page title (Vedmak)
..F....... [ZBX-4863] fixed graph Y marker positions and values when setting a minimum value for the Y scale (Pavels)
A.F....... [ZBX-4861] fixed excess queries upon no-change graph saving (Toms)